--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -9,3 +9,18 @@ two:
   name: The second user
   email: user2@example.com
   password_digest: MyString
+
+jerry:
+  name: Jerry
+  email: jerry@example.com
+  password_digest: <%= BCrypt::Password.create('password') %>
+
+kramer:
+  name: Kramer
+  email: kramer@example.com
+  password_digest: <%= BCrypt::Password.create('password') %>
+
+elaine:
+  name: Elaine
+  email: elaine@example.com
+  password_digest: <%= BCrypt::Password.create('password') %>
