--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/strada": "^1.0.0-beta1",
     "@hotwired/turbo-rails": "^8.0.4",
+    "@rails/activestorage": "^7.1.3-4",
     "bulma": "^1.0.0",
     "esbuild": "^0.20.2",
     "sass": "^1.75.0"
